# mx-bookmarks

./: Cargo.toml
src/: main.rs
src/app/: mod.rs  ui.rs
src/extra_ruma/bookmarks/: global.rs  mod.rs  room.rs
