[package]
name = "mx-bookmarks"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }

matrix-sdk = {git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "8f99180c99ccd74803565fb36098389198091ded"}
matrix-sdk-common-macros = {git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "8f99180c99ccd74803565fb36098389198091ded"}
url = "2.1.1"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.41"

anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

tracing-subscriber = "0.2"
tracing-futures = "0.2.4"

sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }

[dependencies.ruma]
version = "0.0.1"
git = "https://github.com/ruma/ruma"
rev = "50eb700571480d1440e15a387d10f98be8abab59"
features = ["client-api", "unstable-pre-spec", "unstable-exhaustive-types"]

[dev-dependencies]
serde_json = "1.0"
